Bug: height of the login-register overlapping
tried some fixes, pa check on your machine kung okay na yung display.

--- a/styles/login-register.css
+++ b/styles/login-register.css
@@ -2,13 +2,11 @@
     border-left: 1px solid rgba(255, 255, 255, 0.438);
     border-right: 1px solid rgba(255, 255, 255, 0.438);
     width: 700px;
-    min-height: 100%;
+    padding-bottom: 150px;
 }
 
 .lrm-wrapper{
     width: 100%;
-    height: 100%;
-
     display: flex;
     flex-direction: column;
 }
